better main readme

--- a/soulbound-grade-contracts/package.json
+++ b/soulbound-grade-contracts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soulbound-grade",
+  "name": "soulbound-grade-conrtacts",
   "version": "1.0.0",
   "description": "Smart contract implementation for soulbound grade",
   "scripts": {
