--- a/soulbound-grade-frontend/package.json
+++ b/soulbound-grade-frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.18",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "@rainbow-me/rainbowkit": "^2.0.8",
     "@tanstack/react-query": "^5.28.4",
