--- a/soulbound-grade-contracts/package.json
+++ b/soulbound-grade-contracts/package.json
@@ -13,6 +13,7 @@
     "hardhat": "^2.22.4"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0"
+    "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
+    "viem": "^2.13.7"
   }
 }
